# mex-backend

./: .cruft.json  .dockerignore  .gitignore  .mypy.ini  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Makefile  README.md  compose.yaml  pyproject.toml  renovate.json  requirements.txt
.github/workflows/: cookiecutter.yml  cve-scan.yml  docker.yml  documentation.yml  linting.yml  open-code.yml  opencode.yml  release.yml  renovatebot.yml  testing.yml
assets/dex/: config.yaml
assets/raw-data/dex/: config.yaml
assets/raw-data/ldap/: config.ldif.TEMPLATE  data.ldif.TEMPLATE
assets/raw-data/organigram/: organizational_units.json
assets/raw-data/primary-sources/: primary-sources.json
docs/: conf.py  index.rst
docs/source/: mex.backend.extracted.rst  mex.backend.graph.rst  mex.backend.identity.rst  mex.backend.merged.rst  mex.backend.rst  mex.rst  modules.rst
mex/backend/: __init__.py  constants.py  exceptions.py  fields.py  helpers.py  logging.py  main.py  migrate_merged_items_to_workflow_rule.py  migration.py  models.py  oauth.py  responses.py  routers.py  security.py  settings.py  transform.py  types.py  utils.py
mex/backend/auxiliary/: __init__.py  constants.py  helpers.py  ldap.py  models.py  orcid.py  organigram.py  primary_source.py  utils.py  wikidata.py
mex/backend/auxiliary/models/: wikidata.py
mex/backend/cache/: connector.py
mex/backend/extracted/: helpers.py  main.py  models.py  transform.py
mex/backend/graph/: connector.py  constants.py  exceptions.py  hydrate.py  models.py  queries.py  query.py  transform.py
mex/backend/graph/cypher/: README.md  check_match_preconditions.cql  copy_inbound_edges_from_merged.cql  copy_nested_from_rules.cql  copy_node_props_from_rules.cql  copy_outbound_edges_from_rules.cql  create_full_text_search_index.cql  create_full_text_search_index.cypher  create_identifier_constraint.cql  create_identifier_uniqueness_constraint.cql  create_identifier_uniqueness_constraint.cypher  create_nested_type_index.cql  create_provenance_constraint.cql  delete_merged_item.cql  delete_orphaned_merged_item.cql  delete_rule_set.cql  drop_full_text_search_index.cql  exists_item.cql  exists_merged_item.cql  fetch_database_status.cql  fetch_database_status.cypher  fetch_extracted_data.cql  fetch_extracted_data.cypher  fetch_extracted_items.cql  fetch_extracted_or_rule_items.cql  fetch_full_text_search_index.cql  fetch_identities.cql  fetch_identities.cypher  fetch_merged_items.cql  get_full_text_search_index.cql  get_rule_set_response.cql  is_merged_item_orphaned.cql  merge_edge.cypher  merge_edges.cql  merge_edges.cypher  merge_extracted_edges.cql  merge_extracted_item.cql  merge_extracted_node.cql  merge_item.cql  merge_item_v2.cql  (+9 more)
mex/backend/graph/cypher/macros/: check_reference_filters.cql  collect_references_and_nested.cql  filter_nodes_by_reference_filters.cql  match_or_search_nodes.cql
mex/backend/http_test_server/: README.md  main.py  settings.py
mex/backend/identity/: main.py  models.py  provider.py
mex/backend/ingest/: helpers.py  main.py  models.py
mex/backend/ldap/: main.py
mex/backend/match/: helper.py  helpers.py  main.py  models.py
mex/backend/merged/: exceptions.py  helpers.py  main.py  models.py  transform.py
mex/backend/person/: main.py
mex/backend/preview/: main.py  models.py
mex/backend/publishable_merged/: helpers.py  main.py
mex/backend/rules/: helpers.py  main.py  models.py  transform.py
mex/backend/seed/: main.py
mex/backend/system/: main.py  models.py
mex/backend/testing/: ldap.py  main.py  person.py  routers.py  security.py  system.py  user.py
mex/backend/user/: main.py
mex/scripts/: purge.py
scripts/: add_workflow_rule_to_all_rule_sets.py  add_workflow_targets_for_switched_off_merged_items.py  purge.py
tests/: conftest.py  test_benchmark.py  test_exceptions.py  test_fields.py  test_main.py  test_models.py  test_roundtrip.py  test_security.py  test_transform.py  test_types.py  test_utils.py
tests/auxiliary/: conftest.py  test_helpers.py  test_ldap.py  test_orcid.py  test_organigram.py  test_primary_source.py  test_wikidata.py
tests/cache/: test_connector.py
tests/extracted/: test_helpers.py  test_main.py
tests/graph/: conftest.py  test_connector.py  test_exceptions.py  test_hydrate.py  test_macros.py  test_models.py  test_query.py  test_transform.py
tests/graph/cypher/: test_check_reference_filters.cql  test_collect_references_and_nested.cql  test_filter_nodes_by_reference_filters.cql  test_match_or_search_nodes.cql
tests/http_test_folder/: test_main.py
tests/http_test_server/: test_main.py
tests/http_test_server/test_data/extractor/: test_data.json
tests/identity/: test_main.py  test_provider.py
tests/ingest/: test_artificial.py  test_main.py  test_models.py
tests/ldap/: test_main.py
tests/match/: test_helpers.py  test_main.py
tests/merged/: test_helpers.py  test_main.py
tests/person/: test_main.py
tests/preview/: test_main.py  test_models.py
tests/publishable_merged/: test_helpers.py  test_main.py
tests/rules/: conftest.py  test_helpers.py  test_main.py  test_transform.py
tests/seed/: test_main.py
tests/system/: test_main.py
tests/testing/: conftest.py  test_ldap.py  test_person.py  test_security.py  test_system.py  test_user.py
tests/user/: test_main.py
